apps/dino-runner/base/dino-game-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dino-frontend
  namespace: dino-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dino-frontend
  template:
    metadata:
      labels:
        app: dino-frontend
    spec:
      containers:
      - name: dino-frontend
        image: 891377073036.dkr.ecr.us-west-2.amazonaws.com/dino-frontend:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: dino-frontend
  namespace: dino-runner
spec:
  selector:
    app: dino-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
