apps/dino-runner/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dino-runner
  namespace: dino-runner
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: dino-runner.nolancrook.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dino-frontend
            port:
              number: 80
  - host: dino-api.nolancrook.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dino-backend
            port:
              number: 3001
